<resources>
    <string name="app_name">FinaleProject</string>
    <string name="sign_up_nss">NSS</string>
    <string name="sign_up_nom">Nom</string>
    <string name="sign_up_prenom">Prénom</string>
    <string name="sign_up_adress">Adresse</string>
    <string name="sign_up_phone">Telephone</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
